# py-aiger-lazy

./: README.md  pyproject.toml  setup.py
aiger_lazy/: aig.py
