[tool.poetry]
name = "py-aiger-lazy"
version = "0.1.0"
description = "Lazy composition of AIG objects."
authors = ["Marcell Vazquez-Chanlatte <mvc@linux.com>"]
repository = "https://github.com/mvcisback/py-aiger-lazy"
readme="README.md"
license = "MIT"
packages = [
    { include = "aiger_lazy" },
]

[tool.poetry.dependencies]
python = "^3.6"
attrs = "^19.1"
bidict = "^0.18.0"
funcy = "^1.12"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.7"
pytest-flake8 = "^1.0"
pytest-sugar = "^0.9.2"
pytest-xdist = "^1.29"
coverage = "^4.5"
codecov = "^2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
